# zmin

./: .gitignore  Cargo.toml  README.md
crates/skron-cli/: Cargo.toml
crates/skron-cli/src/: main.rs  runtime.rs
crates/skron-cli/src/cli/: mod.rs  schema.rs
crates/skron-cli/src/cli/commands/: admin.rs  admin_impl.rs  archive.rs  archive_impl.rs  commit.rs  commit_impl.rs  config.rs  config_impl.rs  core.rs  core_impl.rs  credential.rs  diff.rs  diff_impl.rs  grep.rs  history.rs  history_impl.rs  import.rs  import_impl.rs  mail.rs  mail_impl.rs  maintenance.rs  maintenance_impl.rs  merge.rs  merge_impl.rs  mod.rs  notes.rs  notes_impl.rs  pack.rs  pack_impl.rs  patch.rs  patch_impl.rs  reference.rs  reference_impl.rs  scalar_impl.rs  sequencer.rs  sequencer_impl.rs  text.rs  transport.rs  transport_impl.rs  worktree.rs  (+1 more)
crates/skron-cli/src/compat/: mod.rs
crates/skron-cli/src/runtime/: cli_support.rs  commit_graph.rs  commit_meta.rs  config.rs  diff_render.rs  env.rs  graph.rs  index.rs  merge_worktree.rs  object.rs  patch_id.rs  phase_trace.rs  primitive_adapters.rs  primitive_runtime.rs  refs.rs  repo.rs  submodule.rs  transport_local.rs  tree_display.rs  types.rs  worktree_index.rs
crates/skron-cli/tests/: compatibility_command.rs  git_admin_tools_compat.rs  git_apply_compat.rs  git_archive_compat.rs  git_check_ignore_compat.rs  git_check_ref_format_compat.rs  git_clean_compat.rs  git_cli_failure_compat.rs  git_clone_compat.rs  git_commit_compat.rs  git_credential_compat.rs  git_diff_compat.rs  git_fast_import_export_compat.rs  git_filter_branch_compat.rs  git_for_each_ref_compat.rs  git_foreign_scm_compat.rs  git_global_cli_compat.rs  git_grep_compat.rs  git_history_query_compat.rs  git_index_mutation_compat.rs  git_ls_files_compat.rs  git_mail_tools_compat.rs  git_maintenance_compat.rs  git_merge_compat.rs  git_merge_plumbing_compat.rs  git_notes_compat.rs  git_object_plumbing_compat.rs  git_pack_integrity_compat.rs  git_patch_series_compat.rs  git_ref_resolution_compat.rs  git_reflog_compat.rs  git_refs_compat.rs  git_repository_state_compat.rs  git_scalar_compat.rs  git_sequencer_compat.rs  git_sparse_checkout_compat.rs  git_stash_compat.rs  git_status_compat.rs  git_submodule_compat.rs  git_text_tools_compat.rs  (+4 more)
crates/skron-cli/tests/common/: mod.rs
crates/skron-git-remote-http/: Cargo.toml
crates/skron-git-remote-http/src/: main.rs
crates/skron-primitives/: Cargo.toml
crates/skron-primitives/src/: id.rs
crates/skron-primitives/src/config/: mod.rs
crates/skron-primitives/src/i18n/: mod.rs
crates/skron-primitives/src/i18n/locales/: de_de.rs  en_us.rs  es_es.rs  pl_pl.rs  uk_ua.rs
crates/skron-primitives/src/transport/: mod.rs
crates/skron-primitives/tests/: custom_client_runtime_smoke.rs
crates/zmin-cli/: Cargo.toml
crates/zmin-cli/src/: lib.rs  runtime.rs
crates/zmin-cli/src/cli/: mod.rs  schema.rs
crates/zmin-cli/src/cli/commands/: admin.rs  admin_impl.rs  archive.rs  archive_impl.rs  cms.rs  cms_impl.rs  commit.rs  commit_impl.rs  config.rs  config_impl.rs  core.rs  core_impl.rs  credential.rs  credential_impl.rs  diff.rs  diff_impl.rs  grep.rs  grep_impl.rs  history.rs  history_impl.rs  import.rs  import_impl.rs  mail.rs  mail_impl.rs  maintenance.rs  maintenance_impl.rs  merge.rs  merge_impl.rs  mod.rs  notes.rs  notes_impl.rs  pack.rs  pack_impl.rs  patch.rs  patch_impl.rs  reference.rs  reference_impl.rs  scalar_impl.rs  sequencer.rs  sequencer_impl.rs  (+6 more)
crates/zmin-cli/src/compat/: mod.rs  v2_32_commands.txt  v2_47_commands.txt
crates/zmin-cli/src/runtime/: cli_support.rs  clone_service.rs  commit_graph.rs  commit_meta.rs  config.rs  diff_render.rs  env.rs  fs_ops.rs  graph.rs  index.rs  merge_worktree.rs  object.rs  pack_index.rs  patch_id.rs  pathspec.rs  phase_trace.rs  primitive_adapters.rs  primitive_runtime.rs  refs.rs  repo.rs  submodule.rs  temp_files.rs  transport_local.rs  tree_display.rs  types.rs  worktree_files.rs  worktree_index.rs
crates/zmin-cli/tests/: compatibility_command.rs  git_add_compat.rs  git_admin_tools_compat.rs  git_apply_compat.rs  git_archive_compat.rs  git_bisect_invalid_compat.rs  git_cat_file_corrupt_object_compat.rs  git_cat_file_invalid_compat.rs  git_check_ignore_compat.rs  git_check_ref_format_compat.rs  git_clean_compat.rs  git_cli_failure_compat.rs  git_clone_compat.rs  git_clone_ref_format_compat.rs  git_cms_porcelain_compat.rs  git_commit_compat.rs  git_credential_compat.rs  git_diff_compat.rs  git_fast_import_date_compat.rs  git_fast_import_export_compat.rs  git_fetch_filter_guard_inventory.rs  git_filter_branch_compat.rs  git_filter_branch_parent_filter_compat.rs  git_for_each_ref_compat.rs  git_foreign_scm_compat.rs  git_global_cli_compat.rs  git_grep_compat.rs  git_history_query_compat.rs  git_index_mutation_compat.rs  git_log_invalid_compat.rs  git_ls_files_compat.rs  git_mail_series_compat.rs  git_mail_tools_compat.rs  git_maintenance_compat.rs  git_merge_compat.rs  git_merge_plumbing_compat.rs  git_notes_compat.rs  git_notes_invalid_compat.rs  git_object_plumbing_compat.rs  git_pack_integrity_compat.rs  (+21 more)
crates/zmin-cli/tests/common/: mod.rs
crates/zmin-git-core/: Cargo.toml
crates/zmin-git-core/src/: attributes.rs  checkout.rs  commit.rs  diff.rs  ignore.rs  index.rs  init.rs  lib.rs  loose.rs  merge_file.rs  object.rs  object_store.rs  pack.rs  reachable.rs  refs.rs  tag.rs  tree.rs
docs/: release_artifacts.md
src/: lib.rs  prelude.rs
tools/: check-release-artifacts.sh  check-stock-git-oracle-spawns.sh  git-add-oracle-smoke.sh  git-apply-checkout-schema-extra-oracle-smoke.sh  git-archive-schema-oracle-smoke.sh  git-branch-schema-extra-oracle-smoke.sh  git-branch-schema-gap-probe.sh  git-bugreport-oracle-smoke.sh  git-bugreport-schema-gap-probe.sh  git-cat-file-schema-oracle-smoke.sh  git-check-attr-oracle-smoke.sh  (+164 more)
(+231 files in other folders)
