[package]
name = "skron-git-remote-http"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "skron-git-remote-http"
path = "src/main.rs"

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.47", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"
quinn = { version = "0.11.7", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "http2", "rustls-no-provider", "stream", "system-proxy"] }
rustls = { version = "0.23.34", default-features = false, features = ["ring", "std", "tls12"] }
rustls-platform-verifier = "0.7.0"
rustls-webpki = { version = "0.103.6", default-features = false, features = ["ring", "std"] }
tempfile = "3.10.1"
tokio = { version = "1.48.0", default-features = false, features = ["net", "rt", "time"] }
