[package]
name = "skron-primitives"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[features]
default = []
cli = ["dep:reqwest", "dep:base64", "dep:serde_json", "dep:sha3"]
wasm = []

[dependencies]
thiserror = "1.0.69"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
nanoid = "0.4.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"], optional = true }
base64 = { version = "0.22.1", optional = true }
serde_json = { version = "1.0.143", optional = true }
sha3 = { version = "0.10.8", optional = true }
