[package]
name = "zmin-git-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[features]
default = ["std"]
std = []
wasm = []

[dependencies]
crc32fast = "1.4.2"
hex = "0.4.3"
flate2 = { version = "1.0.35", default-features = false, features = ["zlib"] }
memmap2 = "0.9.9"
sha1 = "0.10.6"
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.10.1"
